Added CI/CD pipeline configuration 3

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,20 +3,26 @@ stages:
   - test
   - deploy
 
+variables:
+  DEV_ORG_ALIAS: "myIntegAlias"
+  PROD_ORG_ALIAS: "myProdOrgAlias"
+
 build:
   stage: build
   script:
     - echo "Building the Salesforce project..."
-    - sfdx force:source:push -u myScratchOrgAlias # Change to your org alias
+    - sfdx force:source:push -u $DEV_ORG_ALIAS
 
 test:
   stage: test
   script:
     - echo "Running Salesforce unit tests..."
-    - sfdx force:apex:test:run -u myScratchOrgAlias --resultformat human --wait 10
+    - sfdx force:apex:test:run -u $DEV_ORG_ALIAS --resultformat human --wait 10
+    - sfdx force:source:retrieve -u $DEV_ORG_ALIAS -p force-app # Retrieve any new code changes
 
 deploy:
   stage: deploy
   script:
-    - echo "Deploying to Salesforce Org..."
-    - sfdx force:source:deploy -u productionOrgAlias -p force-app # Change to your production org alias
+    - echo "Deploying to Production..."
+    - sfdx force:source:deploy -u $PROD_ORG_ALIAS -p force-app --checkonly # Check deploy first
+    - sfdx force:source:deploy -u $PROD_ORG_ALIAS -p force-app # Final deployment
