--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,8 +4,8 @@ stages:
   - deploy
 
 variables:
-  DEV_ORG_ALIAS: "myIntegAlias"
-  PROD_ORG_ALIAS: "myProdOrgAlias"
+  DEV_ORG_ALIAS: "devMigration"  # Developer Org for Testing
+  PROD_ORG_ALIAS: "myIntegAlias" # Production Org for Deployment
 
 build:
   stage: build
@@ -16,13 +16,15 @@ build:
 test:
   stage: test
   script:
-    - echo "Running Salesforce unit tests..."
-    - sfdx force:apex:test:run -u $DEV_ORG_ALIAS --resultformat human --wait 10
-    - sfdx force:source:retrieve -u $DEV_ORG_ALIAS -p force-app # Retrieve any new code changes
+    - echo "Running Salesforce unit tests with coverage..."
+    - sfdx force:apex:test:run -u $DEV_ORG_ALIAS --resultformat human --wait 10 --codecoverage
+    - sfdx force:source:retrieve -u $DEV_ORG_ALIAS -p force-app
 
 deploy:
   stage: deploy
   script:
-    - echo "Deploying to Production..."
-    - sfdx force:source:deploy -u $PROD_ORG_ALIAS -p force-app --checkonly # Check deploy first
-    - sfdx force:source:deploy -u $PROD_ORG_ALIAS -p force-app # Final deployment
+    - echo "Validating Deployment to Integ Org..."
+    - sfdx force:source:deploy -u $PROD_ORG_ALIAS -p force-app --checkonly
+    - sfdx force:source:deploy -u $PROD_ORG_ALIAS -p force-app  # Actual deployment if validation passes
+  only:
+    - uat-branch
