Fix: use Docker image with Node.js for pipelineV3

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ variables:
 
 before_script:
   - npm install --global sfdx-cli        # Install Salesforce CLI
-  - sfdx force:auth:web:login -r https://test.salesforce.com -a $DEV_ORG_ALIAS  # Authenticate to the Dev Org
+  - sfdx force:auth:jwt:grant --clientid 6Cel800DAW00000C99lO888AW0000004jZd8cdsjE6PITXyjF6e9efpuY3wDn3X0QRBnfC4IV4tCfiadSm3JKBO7baTWnzY4VmicJ7zbpD2 --jwtkeyfile server.key --username hai@ovalo4BoondLab.com --instanceurl https://test.salesforce.com --setalias devMigration
   - sfdx force:auth:login -d -u $PROD_ORG_ALIAS  # Authenticate to the Prod Org
 
 build:
