--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,7 @@ build:
   stage: build
   script:
     - echo "Building the Salesforce project..."
-    - sfdx force:source:push -u $DEV_ORG_ALIAS  # Push changes to Dev Org
+    - sfdx force:source:deploy -u $DEV_ORG_ALIAS  # Push changes to Dev Org
 
 test:
   stage: test
