Fix: use Docker image with Node.js for pipelineV7

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ before_script:
   - npm install --global sfdx-cli        # Install Salesforce CLI
   - sfdx force:auth:jwt:grant --clientid $SFDC_CONSUMER_KEY --jwtkeyfile ./server.key --username $SFDC_USERNAME --instanceurl https://test.salesforce.com --setdefaultusername -a $DEV_ORG_ALIAS
 
-  - sfdx force:auth:login -d -u $PROD_ORG_ALIAS  # Authenticate to the Prod Org
+  - sfdx force:auth:web:login -a $PROD_ORG_ALIAS -r https://login.salesforce.com  # Authenticate to the Prod Org
 
 build:
   stage: build
